package lld.parkinglot.domain.enums;

public enum TicketStatus {
    ACTIVE, CLOSED
}