package lld.parkinglot.domain.enums;

public enum VehicleType {
    BIKE, CAR, TRUCK
}
