package lld.parkinglot.exceptions;

public class SpotAlreadyFreeException extends RuntimeException {
    public SpotAlreadyFreeException(String message) { super(message); }
}
