package lld.parkinglot.exceptions;

public class SpotTypeMismatchException extends RuntimeException {
    public SpotTypeMismatchException(String message) { super(message); }
}