package lld.parkinglot.exceptions;

public class TicketAlreadyClosedException extends RuntimeException {
    public TicketAlreadyClosedException(String message) { super(message); }
}
