package lld.parkinglot.util;

public interface Clock {
    long nowMillis();
}
