package lld.parkinglot.util;

public interface TicketIdGenerator {
    String nextId();
}
